updated url and others for deploying

--- a/tic-tac-toe/src/main/resources/application.yml
+++ b/tic-tac-toe/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://localhost:27017/ttt
+      uri: mongodb+srv://tttuser:tttpassword@cluster0.mbof3.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
       database: ttt
 
   mail:
