--- a/tic-tac-toe/pom.xml
+++ b/tic-tac-toe/pom.xml
@@ -82,6 +82,36 @@
 						<groupId>com.google.cloud.tools</groupId>
 						<artifactId>jib-maven-plugin</artifactId>
 						<version>3.2.0</version>
+						<configuration>
+							<from>
+								<image>eclipse-temurin:11</image>
+								<platforms>
+									<platform>
+										<architecture>arm64</architecture>
+										<os>linux</os>
+									</platform>
+									<platform>
+										<architecture>amd64</architecture>
+										<os>linux</os>
+									</platform>
+								</platforms>
+							</from>
+							<to>
+								<tags>
+									<tag>latest</tag>
+								</tags>
+								<image>aisenkim15/${project.artifactId}:${project.version}</image>
+							</to>
+						</configuration>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>build</goal>
+								</goals>
+							</execution>
+						</executions>
+
 					</plugin>
 				</plugins>
 			</build>
